Css styling that fix gap between the navbar.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -41,6 +41,15 @@ h1 {
 #cover-photo{
   background: rgba(0,0,0,0.4);
 }
+
+.navbar-nav > li > a {
+
+}
+.navbar {
+  margin-bottom: 0px !important;
+
+}
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
